tests/dataset/tpc-ds/compiler/c/q21.error
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c: In function ‘test_TPCDS_Q21_inventory_ratio’:
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:356:20: error: incompatible types when initializing type ‘const char *’ using type ‘tmp_item_t’
  356 |                    (tmp_item_t){.w_warehouse_name = "Main",
      |                    ^
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:362:56: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  362 |   if (test_TPCDS_Q21_inventory_ratio_result.len != tmp1.len) {
      |                                                        ^
      |                                                        ->
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:366:65: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  366 |       if (test_TPCDS_Q21_inventory_ratio_result.data[i3] != tmp1.data[i3]) {
      |                                                                 ^
      |                                                                 ->
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:421:30: error: ‘before_item_t’ has no member named ‘name’
  421 |         if (strcmp(before[i7].name, (tmp_item1_t){.w = inv.inv_warehouse_sk,
      |                              ^
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:421:50: error: incompatible type for argument 2 of ‘strcmp’
  421 |         if (strcmp(before[i7].name, (tmp_item1_t){.w = inv.inv_warehouse_sk,
      |                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                  |
      |                                                  tmp_item1_t
  422 |                                                   .i = inv.inv_item_sk}) == 0) {
      |                                                   ~~~~~~~~~~~~~~~~~~~~~
In file included from /tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:4:
/usr/include/string.h:156:50: note: expected ‘const char *’ but argument is of type ‘tmp_item1_t’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                                      ~~~~~~~~~~~~^~~~
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:428:27: error: ‘before_item_t’ has no member named ‘name’
  428 |         before[before_len].name =
      |                           ^
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:430:27: error: ‘before_item_t’ has no member named ‘count’
  430 |         before[before_len].count = 1;
      |                           ^
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:434:21: error: ‘before_item_t’ has no member named ‘count’
  434 |         before[tmp6].count++;
      |                     ^
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:452:30: error: ‘after_item_t’ has no member named ‘name’
  452 |         if (strcmp(after[i11].name, (tmp_item1_t){.w = inv.inv_warehouse_sk,
      |                              ^
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:452:50: error: incompatible type for argument 2 of ‘strcmp’
  452 |         if (strcmp(after[i11].name, (tmp_item1_t){.w = inv.inv_warehouse_sk,
      |                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                  |
      |                                                  tmp_item1_t
  453 |                                                   .i = inv.inv_item_sk}) == 0) {
      |                                                   ~~~~~~~~~~~~~~~~~~~~~
/usr/include/string.h:156:50: note: expected ‘const char *’ but argument is of type ‘tmp_item1_t’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                                      ~~~~~~~~~~~~^~~~
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:459:25: error: ‘after_item_t’ has no member named ‘name’
  459 |         after[after_len].name =
      |                         ^
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:461:25: error: ‘after_item_t’ has no member named ‘count’
  461 |         after[after_len].count = 1;
      |                         ^
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:465:21: error: ‘after_item_t’ has no member named ‘count’
  465 |         after[tmp10].count++;
      |                     ^
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:469:30: warning: implicit declaration of function ‘joined_item_list_t_create’ [-Wimplicit-function-declaration]
  469 |   joined_item_list_t tmp12 = joined_item_list_t_create(
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:470:13: error: ‘(before_item_t *)&before’ is a pointer; did you mean to use ‘->’?
  470 |       before.len * after.len * warehouse.len * item.len);
      |             ^
      |             ->
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:470:25: error: ‘(after_item_t *)&after’ is a pointer; did you mean to use ‘->’?
  470 |       before.len * after.len * warehouse.len * item.len);
      |                         ^
      |                         ->
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:470:41: error: ‘(warehouse_t *)&warehouse’ is a pointer; did you mean to use ‘->’?
  470 |       before.len * after.len * warehouse.len * item.len);
      |                                         ^
      |                                         ->
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:470:52: error: ‘(item_t *)&item’ is a pointer; did you mean to use ‘->’?
  470 |       before.len * after.len * warehouse.len * item.len);
      |                                                    ^
      |                                                    ->
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:514:20: warning: assignment discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  514 |     result.data[0] = r.w_name;
      |                    ^
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:515:20: warning: assignment discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  515 |     result.data[1] = r.i_id;
      |                    ^
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:516:20: error: incompatible types when assigning to type ‘int’ from type ‘list_string’
  516 |     tmp21[tmp19] = result;
      |                    ^~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:541:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  541 |     _json_string(it.w_warehouse_name);
      |                  ~~^~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:545:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  545 |     _json_string(it.i_item_id);
      |                  ~~^~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq213168420326/001/prog.c:557:43: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  557 |   test_TPCDS_Q21_inventory_ratio_result = result;
      |                                           ^~~~~~
